# praktikum

./: ~$mbar Tugas Asistensi.docx
folder/: main.cpp  perhitungan.h
laporan praktikum/: LAPORAN AKHIR.docx  ~$PORAN AKHIR.docx
modul 1/lembar kumpulkan modul 1/: source code program asistensi.cpp
modul 1/praktikum/: Lembar Tugas Asistensi.docx  flowchart praktikum modul 1.drawio  source code program.cpp
modul 2/kumpulkan tugas modul 2/: source code praktikum.cpp
modul 2/tugas aslab/: flowchart modul 2.drawio  source code asistensi.cpp
modul 3/lembar kumpulan/: Lembar Tugas Praktikum modul 3.docx  Lembar Tugas Resmi modul 3.docx  lembar tugas asistensi modul 3.docx  ~$mbar Tugas Praktikum modul 3.docx  ~$mbar Tugas Resmi modul 3.docx  ~$mbar tugas asistensi modul 3.docx
modul 3/lembar kumpulan/06.2023.1.07746_aditya pramudya putra mulya_sesi3_modul3_laporanpraktikum/: source code aslab mdl 3.cpp
modul 3/praktikum/: Diagram modul 3 praktikum 2.drawio
modul 3/praktikum/source code modul 3/: source code praktikum.cpp
modul 3/praktikum/source code modul 3/exportToHTML/: main.cpp.html
modul 3/tugas aslab/: diagram aslab.drawio
modul 3/tugas aslab/source code aslab/: CMakeLists.txt  main.cpp
modul 4/praktikum/: Lembar Tugas Asistensi modul 4.docx  Lembar Tugas Praktikum modul 4.docx  Lembar Tugas Resmi modul 4.docx  ~$mbar Tugas Asistensi modul 4.docx  ~$mbar Tugas Praktikum modul 4.docx  ~$mbar Tugas Resmi modul 4.docx  ~WRL0071.tmp
modul 4/praktikum/modul 4 source code/: CMakeLists.txt  perhitungan.cpp
tiket final/: CMakeLists.txt
